specs/001-typescript-to-zig-native/examples/valid/function-hoist.ts
console.log(add(4, 6));

function add(a: int, b: int): int {
  return a + b;
}
