specs/001-typescript-to-zig-native/examples/invalid/bare-return-nonvoid.ts
function bad(): int {
  return;
}

console.log(bad());
